Filter JVM parameters of test process based on Java major version